Grok changes
************

1.8 (unreleased)
================

- Expose the Layout, Page, AddFormPage, EditFormPage, DisplayFormPage and
  FormPage components that are brought by grokcore.layout. The grok variants
  mixin application_url() and flash() functionality typically found in grok's
  viewish components.

- Expose the ExecptionPage, NotFoundPage and UnauthorizedPage component from
  grokcore.layout.

- Expose the ContentProvider component from grokcore.view

- Declare the name "index" as default view name for error views.

1.7 (2011-05-26)
================

- Directly depend on zope.app.wsgi and configure it too to have the useful
  IResult adapters for (temporary) files registered.

- Import grokcore.component.global_adapter too.

1.6 (2011-04-04)
================

- Fix tests that relied on older versions of zope.testbrowser.

- Added grok.index.Value component.

1.5 (2011-02-14)
================

- Added import for Subscription and MultiSubscription components.

1.4.3 (2011-02-08)
==================

- Fix tests now that error views no longer by default provide ISystemErrorView.

1.4.2 (2011-01-20)
==================

- Should've listed IApplication as part of the grok API too.

1.4.1 (2011-01-20)
==================

- Grok should still provide IApplication in the grok API, even now that it
  got moved to grokcore.site.interfaces.

1.4 (2011-01-20)
================

- Define error view baseclasses for IException, INotFound and IUnauthorized
  errors: grok.ExceptionView, grok.NotFoundView, grok.UnauthorizedView. Lifts
  the indirect dependency on zope.app.http and zope.app.exception.

- Moved the XMLRPC, REST component into separate packages
  grokcore.xmlrpc and grokcore.rest. Consequently the custom traverse
  components that Grok defined were moved to grokcore.traverser. Grok
  the-python-package acts more and more like an import-hub.

- To build the docs we now use `collective.recipe.sphinxbuilder`